# 114507

./: .gitignore  README.md  device.db  大型車知名公司.docx  特斯拉與中國電動車運算方式比較.docx
AI_Research/: 0429蒯老師說明之細節內容.docx  README.md  hardware_application_report.md
AI_code/dms/: CMakeLists.txt  README.md
AI_code/dms/src/: camera.cpp  camera.hpp  drowsiness_detector.cpp  drowsiness_detector.hpp  face_detector.cpp  face_detector.hpp  main.cpp  posture_analyzer.cpp  posture_analyzer.hpp
car_station/: README.md  README.md    app.py  camera_config.py  check_device.py  device.db  init_db.py  requirements.txt
manager_station/: app.py  db.py  init_db.py
pico_2/: README.md  main.py
server_station/: MySQl_design.txt  app.py  db.py  init_db.py  requirements.txt  test.py
會議記錄/: 2025-03-27_四下第六週指導老師會議記錄.docx  2025-04-07_四下第八週第一次指導老師會議記錄.docx  2025-04-07會議記錄.docx  2025-04-10會議記錄.docx  2025-04-14會議記錄-1.docx  2025-04-24_四下第十週第指導老師會議記錄.docx  2025-05-09會議記錄.docx  2025-4-10四下第八週第二次專題指導老師會議紀錄.docx  README.md
法規/: readme.md
簡報/: 2025-03-20_四下第五週指導老師會議簡報.pptx  README.md
系統文件/: readme.md  五專第114507組-MDG-系統手冊-V10_202505230121.docx  五專第114507組-MDG-系統手冊-V1_20250512.docx  五專第114507組-MDG-系統手冊-V2_20250513.docx  五專第114507組-MDG-系統手冊-V3_20250514.docx  五專第114507組-MDG-系統手冊-V4_202505172215.docx  五專第114507組-MDG-系統手冊-V5_202505180030.docx  五專第114507組-MDG-系統手冊-V6_202505191730.docx  五專第114507組-MDG-系統手冊-V7_202505192226.docx  五專第114507組-MDG-系統手冊-V8_202505192238.docx  五專第114507組-MDG-系統手冊-V9_202505192333.docx
系統文件所需要的圖/: readme.md
系統文件需要的資料/: 系統文件6-2.docx  表格及其Raw Data.docx  資料字典 Data Dictionary(修正版).docx  (+1 more)
(+155 files in other folders)
